--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,93 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	
+}
+
 ul {
 	list-style-type: none;
 }
-}
 
 body {
-	max-width: 1200px;
-	margin: 0 auto;
-	/* text-align: center; */
+	background-color: #fff3e6 ;
+	font-family: 'Montserrat', sans-serif;
+	padding: 20px;
 }
 
-nav ul li a {
+ ul li a {
 	text-decoration: none;
 	color: black;
 }
 
-section ul li a {
-	text-decoration: none;
-	color: blue;
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
+
+header {
+
+	background-color: rgb(241, 160, 160);
+   border-radius: 10px;
+	margin: 20px;
+	
+
+	 ul{
+		display: flex;
+		gap: 27px;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		padding: 20px 50px;
+	}
+
+	ul li a{
+		position: relative;
+	}
+
+   ul li a:after {
+	  content: '';
+     position: absolute;
+     bottom: -2px;
+	  left: 50%;
+	  width: 0;
+	  height: 2px;
+	  background-color: rgb(74, 61, 6);
+	  transition: width 0.3s ease, left 0.3s ease;
+	}
+
+	
+   ul li a:hover::after {
+	 width: 100%;
+	 left: 0;      
+}
+
+ }
+
+h1,h2,h3 {
+	margin-bottom: 10px;
+}
+
+#profil {
+   background-color: #f5deb3;
+	text-align: center;
+	padding: 20px;
+	border-radius: 10px;
+
+ 	img {
+		display: block;
+		margin: auto;
+		width: 300px;
+		height: 250px;
+		border-radius: 50%;
+		object-fit: cover;
+		border: 3px solid #333;
+		margin-bottom: 20px;
+	}
+
+	
+}
+
+
+iframe {
+	background: white;
+}
